--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "inherits": "^2.0.1",
     "is-my-json-valid": "^2.12.0",
     "isarray": "0.0.1",
-    "level-simple-indexes": "0.0.2",
+    "level-simple-indexes": "^1.0.0",
     "subleveldown": "^2.0.0",
     "through2": "^0.6.5"
   },
