--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "level-model",
   "description": "A higher-level module for creating content models using levelup as db and is-my-json-valid for validation",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "repository": {
     "url": "git://github.com/sethvincent/level-model.git"
   },
@@ -18,6 +18,7 @@
     "inherits": "^2.0.1",
     "is-my-json-valid": "^2.12.0",
     "isarray": "0.0.1",
+    "json-schema-defaults": "^0.1.1",
     "level-simple-indexes": "^1.0.0",
     "subleveldown": "^2.0.0",
     "through2": "^0.6.5"
