--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "node test.js | tap-spec"
+    "deps": "dependency-check . && dependency-check . --unused --no-dev && ncu",
+    "lint": "standard",
+    "test:no-lint": "node tests/*.js | tap-spec",
+    "test": "npm run lint && npm run test:no-lint"
   },
   "dependencies": {
     "component-emitter": "^1.2.1",
@@ -23,10 +26,11 @@
     "through2": "^2.0.1"
   },
   "devDependencies": {
-    "levelup": "^1.3.3",
-    "memdown": "^1.2.2",
+    "inherits": "^2.0.3",
+    "level-browserify": "^1.1.0",
+    "memdb": "^1.3.1",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.2",
+    "tape": "^4.6.3",
     "through2": "^2.0.1"
   }
 }
