--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "inherits": "^2.0.3",
     "level-browserify": "^1.1.0",
     "memdb": "^1.3.1",
+    "standard": "^8.6.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "through2": "^2.0.1"
